force-app/main/default/objects/FS_Initial_Order__c/fields/FS_X15_Slots_to_Add__c.field-meta.xml
<CustomField>
    <fullName>FS_X15_Slots_to_Add__c</fullName>
    <label>15 Slots to Add</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>