force-app/main/default/objects/FS_Initial_Order__c/fields/FS_X16_Slots_to_Add2__c.field-meta.xml
<CustomField>
    <fullName>FS_X16_Slots_to_Add2__c</fullName>
    <label>16 Slots to Add</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>