force-app/main/default/objects/FS_Initial_Order__c/fields/Initial_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Order_Status__c</fullName>
    <label>Initial Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>