force-app/main/default/objects/FS_Initial_Order__c/fields/Reason_for_modifying_VPO_Override__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_modifying_VPO_Override__c</fullName>
    <formula>IF( CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.Reason_for_modifying_VPO_Override__c, 
FS_Installation__r.FS_Outlet__r.Reason_for_modifying_VPO_Override__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason for modifying VPO Override</label>
    <type>Text</type>
</CustomField>