force-app/main/default/objects/FS_Initial_Order__c/fields/Total_Customer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Cost__c</fullName>
    <label>Total Customer Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>