force-app/main/default/objects/FS_Initial_Order__c/fields/Total_VPO_New_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Total_VPO_New_Outlet__c</fullName>
    <description>This refers New Outlet&#39;s Total VPO (Relocation Types only)</description>
    <formula>FS_Installation__r.FS_New_Outlet__r.Total_VPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VPO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>