force-app/main/default/objects/FS_Initial_Order__c/fields/VPO_Override_Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>VPO_Override_Update_Date_Time__c</fullName>
    <formula>IF( CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.VPO_Override_Modified_Time__c, 
FS_Installation__r.FS_Outlet__r.VPO_Override_Modified_Time__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VPO Override Update Date/Time</label>
    <type>DateTime</type>
</CustomField>