force-app/main/default/objects/FS_Initial_Order__c/fields/VPO_Override_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>VPO_Override_Updated_By__c</fullName>
    <formula>IF( CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.VPO_Override_Modified_By__c, 
FS_Installation__r.FS_Outlet__r.VPO_Override_Modified_By__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VPO Override Updated By</label>
    <type>Text</type>
</CustomField>