force-app/main/default/objects/FS_Initial_Order__c/recordTypes/New_Install.recordType-meta.xml
<RecordType>
    <fullName>New_Install</fullName>
    <active>true</active>
    <label>New Install</label>
</RecordType>