force-app/main/default/objects/FS_Initial_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FS_Outlet_Information__c</columns>
    <columns>NAME</columns>
    <columns>FS_of_dispensers_to_ship_to_outlet__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>FS_VPO_Override__c</columns>
    <columns>FS_Payment_Method_SetUp__c</columns>
    <columns>FS_OrderMethod__c</columns>
    <columns>FS_Order_Processed__c</columns>
    <columns>Initial_Order_Status__c</columns>
    <columns>FS_Initial_Delivery_Date__c</columns>
    <columns>FS_dispInclude__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>